--- a/index.html
+++ b/index.html
@@ -764,6 +764,7 @@ function start_online_party() { // to figure out
         timeup();
       } else {
         cloud_move(data.pos);
+        spawnpiece = "";
     }
     }});
 }
@@ -778,6 +779,8 @@ if (pos.length === 4) {
     closeForm(pos[4]);
     click(pos[2]+pos[3]);
 }
+willing_to_click2 = "wait";
+setTimeout(() => { willing_to_click2 = "";}, 500);
 }
 
 function clicking(pos) {  /*to work out : feature to add : who starts as white */
@@ -792,6 +795,7 @@ function clicking(pos) {  /*to work out : feature to add : who starts as white *
             click(pos);
             if (  (hoster && blackturn)  ||  (!hoster &&  !blackturn)  ) {
                 sendmove(lastclick + clicked + spawnpiece );
+                spawnpiece = "";
             }
         }
 }}
@@ -858,7 +862,7 @@ function checkroomavailablity(room) { // joiner (can become hoster) (hoster conf
         document.getElementById("offline").classList.add("offline_disabled");
         checkforjoin();
         }
-     }, 500);
+     }, randomIntFromInterval( 700 , 1200 ) );
     gameRef.on('value', (snapshot) => {
     const data = snapshot.val();
     if (data.join !== name) {
@@ -886,6 +890,9 @@ function checkroomavailablity(room) { // joiner (can become hoster) (hoster conf
         }, 2450);
     }
     }});}
+
+function randomIntFromInterval(min, max) { // min and max included 
+  return Math.floor(Math.random() * (max - min + 1) + min);}
 
 function whyrestart(reason) {
     start_new_game(0);
@@ -1760,7 +1767,9 @@ function click(pos) {
                 }else if (spawnpiece === "4") { 
                     document.getElementById(lastclick).innerHTML = "♜";
                 }
+                if (offline_game === 1) {
                 spawnpiece = "";
+                }
                 blackpieces = blackpieces.slice(0,blackpos.indexOf(lastclick)) +document.getElementById(lastclick).innerHTML+blackpieces.slice(blackpos.indexOf(lastclick)+1,blackpieces.length)                
             }
             if (slot(lastclick) === "♙" && clicked[1] === "8") {
@@ -1774,7 +1783,9 @@ function click(pos) {
                 }else if (spawnpiece === "4") { 
                     document.getElementById(lastclick).innerHTML = "♖";
                 }
+                if (offline_game === 1) {
                 spawnpiece = "";
+                }
                 whitepieces = whitepieces.slice(0,whitepos.indexOf(lastclick)) +document.getElementById(lastclick).innerHTML+whitepieces.slice(whitepos.indexOf(lastclick)+1,whitepieces.length)
             }
 
